// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createConfig with node set in current config 1`] = `
Object {
  "ava": false,
  "babel": false,
  "cypress": false,
  "dependencies": Array [
    "eslint@^42",
  ],
  "flowtype": false,
  "jest": true,
  "mocha": false,
  "node": true,
  "prettier": true,
  "react": false,
  "typescript": false,
  "vue": false,
  "yarn": false,
}
`;

exports[`createConfig without env in current config 1`] = `
Object {
  "ava": false,
  "babel": false,
  "cypress": false,
  "dependencies": Array [
    "eslint@^42",
  ],
  "flowtype": false,
  "jest": true,
  "mocha": false,
  "node": false,
  "prettier": true,
  "react": false,
  "typescript": false,
  "vue": false,
  "yarn": false,
}
`;
